feat: add page header

--- a/index.html
+++ b/index.html
@@ -3,8 +3,21 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="./styles/reset.css">
+    <link rel="stylesheet" href="./styles/index.css">
     <title>Landing Page</title>
 </head>
 <body>
+    <header>
+        <p class="icon_text">BALLECOFFE</p>
+        <div class="header_text_navegation">
+            <p class="navegation_home_text">Home</p>
+            <p class="navigation_extra_text">Receitas</p>
+            <p class="navigation_extra_text">Novidades</p>
+            <p class="navigation_extra_text">Melhor avaliadas</p>
+        </div>
+        <p class="extra_text_header">Github</p>
+    </header>
+
 </body>
 </html>
