--- a/index.html
+++ b/index.html
@@ -19,5 +19,16 @@
         <p class="extra_text_header">Github</p>
     </header>
 
+    <section>
+        <div class="section_container_text">
+            <h4 class="section_subtitle">NOVIDADE</h4>
+            <h1 class="section_main_text">Encontre a <br>receita perfeita!</h1>
+            <img src="./images/Rectangle 1.png">
+            <h2 class="section_about_text">Explore dezenas de variações da bebida favorita<br>entre os devs ao redor mundo!</h2>
+        </div>
+        <div class="section_imgs_container">
+        </div>
+    </section>
+    
 </body>
 </html>
