feat: add right imgs of section container

--- a/index.html
+++ b/index.html
@@ -27,6 +27,18 @@
             <h2 class="section_about_text">Explore dezenas de variações da bebida favorita<br>entre os devs ao redor mundo!</h2>
         </div>
         <div class="section_imgs_container">
+            <figure><img src="images/image 17.png" class="section_imgs"></figure>
+            <figure><img src="images/image 15.png" class="section_imgs"></figure>
+            <figure><img src="images/image 13.png" class="section_imgs"></figure>
+            <figure><img src="images/image 14.png" class="section_imgs"></figure>
+            <figure><img src="images/image 12.png" class="section_imgs"></figure>
+            <figure><img src="images/image 10.png" class="section_imgs"></figure>
+            <figure><img src="images/image 16.png" class="section_imgs"></figure>
+            <figure><img src="images/image 18.png" class="section_imgs"></figure>
+            <figure><img src="images/image 11.png" class="section_imgs"></figure>
+            <figure><img src="images/image 14.png" class="section_imgs"></figure>
+            <figure><img src="images/image 12.png" class="section_imgs"></figure>
+            <figure><img src="images/image 10.png" class="section_imgs"></figure>
         </div>
     </section>
     
