feat: add users opinion section

--- a/index.html
+++ b/index.html
@@ -18,29 +18,91 @@
         </div>
         <p class="extra_text_header">Github</p>
     </header>
-
-    <section>
-        <div class="section_container_text">
-            <h4 class="section_subtitle">NOVIDADE</h4>
-            <h1 class="section_main_text">Encontre a <br>receita perfeita!</h1>
-            <img src="./images/Rectangle 1.png">
-            <h2 class="section_about_text">Explore dezenas de variações da bebida favorita<br>entre os devs ao redor mundo!</h2>
-        </div>
-        <div class="section_imgs_container">
-            <figure><img src="images/image 17.png" class="section_imgs"></figure>
-            <figure><img src="images/image 15.png" class="section_imgs"></figure>
-            <figure><img src="images/image 13.png" class="section_imgs"></figure>
-            <figure><img src="images/image 14.png" class="section_imgs"></figure>
-            <figure><img src="images/image 12.png" class="section_imgs"></figure>
-            <figure><img src="images/image 10.png" class="section_imgs"></figure>
-            <figure><img src="images/image 16.png" class="section_imgs"></figure>
-            <figure><img src="images/image 18.png" class="section_imgs"></figure>
-            <figure><img src="images/image 11.png" class="section_imgs"></figure>
-            <figure><img src="images/image 14.png" class="section_imgs"></figure>
-            <figure><img src="images/image 12.png" class="section_imgs"></figure>
-            <figure><img src="images/image 10.png" class="section_imgs"></figure>
-        </div>
-    </section>
     
+    <div class="section_englober">
+        <section>
+            <div class="section_container_text">
+                <h4 class="section_subtitle">NOVIDADE</h4>
+                <h1 class="section_main_text">Encontre a <br>receita perfeita!</h1>
+                <img src="./images/Rectangle 1.png">
+                <h2 class="section_about_text">Explore dezenas de variações da bebida favorita<br>entre os devs ao redor mundo!</h2>
+            </div>
+            <div class="section_imgs_container">
+                <figure><img src="images/image 17.png" class="section_imgs"></figure>
+                <figure><img src="images/image 15.png" class="section_imgs"></figure>
+                <figure><img src="images/image 13.png" class="section_imgs"></figure>
+                <figure><img src="images/image 14.png" class="section_imgs"></figure>
+                <figure><img src="images/image 12.png" class="section_imgs"></figure>
+                <figure><img src="images/image 10.png" class="section_imgs"></figure>
+                <figure><img src="images/image 16.png" class="section_imgs"></figure>
+                <figure><img src="images/image 18.png" class="section_imgs"></figure>
+                <figure><img src="images/image 11.png" class="section_imgs"></figure>
+                <figure><img src="images/image 14.png" class="section_imgs"></figure>
+                <figure><img src="images/image 12.png" class="section_imgs"></figure>
+                <figure><img src="images/image 10.png" class="section_imgs"></figure>
+            </div>
+        </section>
+    </div>
+    <article>
+        <div class="article_introduction">
+            <h4 class="section_subtitle">RECEITAS</h4>
+            <h2>Confira as últimas receitas</h2>
+            <h5 class="section_about_text">Dê uma olhada nas receitas mais amadas</h5>
+        </div>
+        <aside>
+
+            <div class="coments_section">
+                <div class="people_coments_container">
+                    <h6>EM ALTA🔥</h6>
+                    <div class="product_score">
+                        <h3>Cappuccino ☕</h3>
+                        <h4>Extraordinário - 4/4</h4>
+                    </div>
+                    <p>Uma bebida ideal para os amantes de doce e cremosidade🤭</p>
+                    <div class="user_infos">
+                        <img src="images/Avatar.png">
+                        <p>Rafaella Ballerini</p>
+                    </div>
+                </div>
+                <div class="people_coments_container">
+                    <h6>EM ALTA🔥</h6>
+                    <div class="product_score">
+                        <h3>Cappuccino ☕</h3>
+                        <h4>Extraordinário - 4/4</h4>
+                    </div>
+                    <p>Uma bebida ideal para os amantes de doce e cremosidade🤭</p>
+                    <div class="user_infos">
+                        <img src="images/Avatar.png">
+                        <p>Rafaella Ballerini</p>
+                    </div>
+                </div>
+                <div class="people_coments_container">
+                    <h6>EM ALTA🔥</h6>
+                    <div class="product_score">
+                        <h3>Cappuccino ☕</h3>
+                        <h4>Extraordinário - 4/4</h4>
+                    </div>
+                    <p>Uma bebida ideal para os amantes de doce e cremosidade🤭</p>
+                    <div class="user_infos">
+                        <img src="images/Avatar.png">
+                        <p>Rafaella Ballerini</p>
+                    </div>
+                </div>
+                <div class="people_coments_container">
+                    <h6>EM ALTA🔥</h6>
+                    <div class="product_score">
+                        <h3>Cappuccino ☕</h3>
+                        <h4>Extraordinário - 4/4</h4>
+                    </div>
+                    <p>Uma bebida ideal para os amantes de doce e cremosidade🤭</p>
+                    <div class="user_infos">
+                        <img src="images/Avatar.png">
+                        <p>Rafaella Ballerini</p>
+                    </div>
+                </div>
+            </div>
+            <p class="more_examples">Carregar mais receitas...</p>
+        </aside>
+    </article>
 </body>
 </html>
