feat: add footer

--- a/index.html
+++ b/index.html
@@ -50,7 +50,6 @@
             <h5 class="section_about_text">Dê uma olhada nas receitas mais amadas</h5>
         </div>
         <aside>
-
             <div class="coments_section">
                 <div class="people_coments_container">
                     <h6>EM ALTA🔥</h6>
@@ -104,5 +103,10 @@
             <p class="more_examples">Carregar mais receitas...</p>
         </aside>
     </article>
+
+    <footer>
+        <h5>Copyright &lt;CODEFEE /&gt; 2023</h5>
+        <p>Feito com muito amor e carinho pro meu chef</p>
+    </footer>
 </body>
 </html>
